add sample deep link

--- a/app/intentfilter/src/main/AndroidManifest.xml
+++ b/app/intentfilter/src/main/AndroidManifest.xml
@@ -18,6 +18,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
 
             </intent-filter>
+
+            <intent-filter android:autoVerify="true">
+                <data android:host="example.com" />
+                <data android:scheme="https" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <data android:host="example.com" />
+                <data android:scheme="http" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
         </activity>
     </application>
 
